# retail-intelligence

./: .env.example  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  retail-intelligence.ipynb
.github/workflows/: ci.yml
app/: README.md  __init__.py  index.py  main.py
app/api/: chat.py
app/guardrails/: __init__.py  prompt_injection.py  security_filter.py
app/rag/: __init__.py  country_filter.py  hybrid_search.py  intent_classifier.py  metadata_filter.py  pipeline.py  prompt_builder.py  query_decomposition.py  query_reformulation.py  retriever.py
app/services/: query_service.py
data/processed/: products_clean.csv
data/raw/: customers_raw.csv  orders_raw.csv  products_data_3000.csv  products_raw.csv  task1_data.csv
docs/: ROADMAP.md  TECHNICAL_PRESENTATION.md  architecture.md  security.md
evaluation/: test_queries.py
frontend/: chat_app.py
pipelines/indexing/: __init__.py  build_vector_index.py
pipelines/ingestion/: __init__.py  clean_data.py  ingest_task_data.py
scripts/: generate_retail_dataset.py  run_indexing.py  run_retrieval.py
vector_store/faiss_index/: index.faiss  metadata.json
