[project]
name = "retail-intelligence"
version = "0.1.0"
description = "Global Retail Intelligence Engine — RAG-powered product & policy assistant"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "gradio>=6.9.0",
    "ruff>=0.15.6",
]

[project.scripts]
serve            = "app.main:app"
generate_dataset = "scripts.generate_retail_dataset:main"
build_index      = "scripts.run_indexing:main"
run_retrieval    = "scripts.run_retrieval:main"

[dependency-groups]
pipelines = [
    "pandas>=2.2",
    "openpyxl>=3.1",
]

frontend = [
    "streamlit>=1.35",
    "requests>=2.32",
]

dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "pipelines", "scripts"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true
